// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkArchiveClassesBanner when it is July-September should render null when no classes are older than three months 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  onSuccess={[Function]}
  userId={1}
/>
`;

exports[`BulkArchiveClassesBanner when it is July-September should render null when the teacher has already closed it for this school year 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  onSuccess={[Function]}
  userId={1}
/>
`;

exports[`BulkArchiveClassesBanner when it is July-September should render when none of the above conditions are met 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  onSuccess={[Function]}
  userId={1}
>
  <section
    className="bulk-archive-classes-banner"
  >
    <span>
      <strong>
        Start of a new school year?
      </strong>
       Quickly archive last year’s classes.
    </span>
    <span>
      <button
        className="quill-button medium outlined secondary"
        onClick={[Function]}
        type="button"
      >
        Archive classes
      </button>
      <button
        className="pass-through-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="X icon"
          src="undefined/images/icons/close.svg"
        />
      </button>
    </span>
  </section>
</BulkArchiveClassesBanner>
`;

exports[`BulkArchiveClassesBanner when it is not July-September should render null when it is not July-September 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  onSuccess={[Function]}
  userId={1}
/>
`;
